syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";

package scheduler;

service Scheduler {
  rpc GetVersion(VersionRequest) returns (VersionResponse) {}
  rpc RunContainer(RunContainerRequest) returns (RunContainerResponse) {}
}

message VersionRequest {}
message VersionResponse { string version = 1; }

message RunContainerRequest {
  string container_id = 1;
  repeated string env = 2;
  repeated string entry_point = 3;
  string cpu = 4;
  string memory = 5;
  string gpu = 6;
  string image_id = 10;
  float schedule_timeout = 12;
}

message RunContainerResponse {
  bool success = 3;
  string error = 4;
}